# NAVIFACT

./: .env.example  .env.production.example  .envrc  .gitignore  CLAUDE.md  docker-compose.yml  package.json  pnpm-lock.yaml
.claude/commands/: generate-scenario.md
.github/workflows/: ci.yml  deploy-prod.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: config.py  dependencies.py  main.py
apps/api/app/ai/: fact_checker.py
apps/api/app/api/v1/: agreements.py  auth.py  claims.py  discussions.py  events.py  graph.py  leaderboard.py  market_impacts.py  narratives.py  points.py  predictions.py  router.py  search.py  shop.py  titles.py  users.py
apps/api/app/core/: auth.py  exceptions.py
apps/api/app/db/: meilisearch.py  neo4j.py  postgres.py  redis.py
apps/api/app/models/: activity.py  agreement.py  claim.py  common.py  discussion.py  event.py  graph.py  leaderboard.py  market_impact.py  narrative.py  prediction.py  shop.py  title.py  user.py
apps/api/app/services/: activity_service.py  agreement_service.py  discussion_service.py  event_service.py  graph_service.py  leaderboard_service.py  market_impact_service.py  point_service.py  prediction_service.py  shop_service.py  title_service.py
apps/api/scripts/: init_neo4j.cypher  seed_data.py  seed_debate_titles.py  seed_shop.py  seed_titles.py
apps/api/tests/: conftest.py
apps/web/: Dockerfile  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  robots.ts  sitemap.ts
apps/web/lib/: api-client.ts  auth.ts  (+3 more)
infrastructure/docker/: docker-compose.prod.yml  docker-compose.yml
(+324 files in other folders)
