[project]
name = "navifact-api"
version = "0.1.0"
description = "NAVIFACT — Fact-based historical event tracking portal API"
requires-python = ">= 3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]",
    "neo4j>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "redis>=5.0",
    "meilisearch>=0.31",
    "celery[redis]",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
